# LongDistanceCompanion

./: .demo_env  README.md
app/: .demo_env  Dockerfile  README.md  db.sqlite
app/apps/authentication-generator/src/: main.rs
app/apps/client/src/: main.rs
app/apps/server/src/: auth.rs  config.rs  lib.rs  main.rs  tick.rs
apps/authentication-generator/: Cargo.toml
apps/client/: Cargo.toml
apps/client/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: config.rs  main.rs  settings.rs  tick.rs
device/: Cargo.toml
device/.cargo/: config.toml
device/src/: lib.rs
device/src/state/: mod.rs  server_state.rs  tick_history.rs  time.rs
