[package]
name = "device"
version = "0.1.0"
edition = "2021"

[dependencies]
# General
log = { version = "0.4.21", features = ["release_max_level_debug"] }
reqwless = { version = "=0.12.1", features = ["log"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
weact-studio-epd = { version = "0.1.2", features = ["blocking"] }
display-interface-spi = { version = "0.5.0" }
embedded-graphics = "0.8.1"
profont = "0.7.0"

# Embedded
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.2.0" }

# Esp
esp-hal-embassy = { version = "0.5.0", features = ["esp32"] }
esp-hal = { version = "0.22.0", features = [
    "esp32",
] }
esp-backtrace = { version = "0.14.1", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.5.0" }
esp-wifi = { version = "0.11.0", default-features = false, features = [
    "esp32",
    "utils",
    "wifi",
    "esp-alloc",
    "log",
] }

# Embassy
embassy-embedded-hal = "0.2.0"
embassy-sync = "0.6.1"
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dns", "dhcpv4", "medium-ethernet"] }
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-24576",
] }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
