[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
server = { path = "../server" }
reqwest = { version = "0.12.9", features = ["json"] }
secp256k1 = { version = "0.30.0", features = ["hashes"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = "1.0.214"
serde_json = "1.0.132"